--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  just_audio: ^0.9.35
   flutter:
     sdk: flutter
+  audioplayers: ^5.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -90,3 +92,12 @@ flutter:
 
   assets:
     - assets/color3.png
+    - assets_audio/black.mp3
+    - assets_audio/red.mp3
+    - assets_audio/yellow.mp3
+    - assets_audio/green.mp3
+    - assets_audio/purple.mp3
+    - assets_audio/brown.mp3
+    - assets_audio/orange.mp3
+    - assets_audio/white.mp3
+    - assets_audio/blue.mp3
